# wildedge-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  compat.yml  release-pr.yml  release.yml
docs/: compatibility.md  configuration.md  manual-tracking.md
examples/: agentic_example.py  anthropic_example.py  attachments_example.py  chatgpt_example.py  feedback_example.py  gguf_example.py  gguf_gemma_example.py  gguf_gemma_manual_example.py  keras_example.py  mlx_example.py  onnx_example.py  openai_example.py  pytorch_example.py  tensorflow_example.py  timm_example.py  transformers_example.py
examples/cli/: cli_wrapper_example.py  demo.sh  pyproject.toml  run_cli_wrapper_example.sh
examples/django_gemma/: demo.sh  gunicorn.conf.py  manage.py  pyproject.toml
examples/django_gemma/gemmaapp/: settings.py  urls.py  views.py  wsgi.py
examples/fastapi_openai/: demo.sh  pyproject.toml
internal/research/: Supporting Agentic Workflows.md  Trace Span API Tweaks.md
scripts/: build_changelog_comment.py  build_coverage_comment.py  check_tag_version.py  compat_matrix.py  run_compat_local.py
tests/: conftest.py  test_attachments.py  test_autoload.py  test_batch.py  test_cli.py  test_client.py  test_client_flows.py  test_consumer.py  test_dead_letters.py  test_decorators.py  test_device.py  test_event_serialization.py  test_hardware_context.py  test_hubs.py  test_init.py  test_integration_patching.py  test_integrations.py  test_integrations_anthropic.py  test_integrations_common.py  test_integrations_openai.py  test_integrations_pytorch.py  test_integrations_ultralytics.py  test_model.py  test_offline_replay.py  test_platform_adapter.py  test_platform_adapters.py  test_platform_linux.py  test_platform_macos.py  test_platform_windows.py  test_queue.py  test_reservoir.py  test_sampler.py  test_settings.py  test_tensorflow_integration.py  test_tracing.py  test_transmitter.py
tests/compat/: conftest.py  test_anthropic_compat.py  test_gguf_compat.py  test_mlx_compat.py  test_onnx_compat.py  test_openai_compat.py  test_tensorflow_compat.py  test_timm_compat.py  test_torch_compat.py  test_transformers_compat.py  test_ultralytics_compat.py
wildedge/: __init__.py  attachments.py  batch.py  cli.py  client.py  config.py  constants.py  consumer.py  convenience.py  dead_letters.py  decorators.py  device.py  hf_cache.py  logging.py  model.py  paths.py  queue.py  reservoir.py  settings.py  timing.py  tracing.py  transmitter.py
wildedge/autoload/: sitecustomize.py
wildedge/events/: __init__.py  common.py  error.py  feedback.py  inference.py  model_download.py  model_load.py  model_unload.py  span.py
wildedge/hubs/: __init__.py  base.py  huggingface.py  registry.py  (+1 more)
(+19 files in other folders)
