[project]
name = "wildedge-sdk"
version = "0.1.0"
description = "On-device ML inference monitoring for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { file = "LICENSE" }
authors = [
    { name = "WildEdge", email = "wildedge@googlegroups.com" },
]
keywords = ["machine learning", "inference", "monitoring", "observability", "edge ai", "mlops", "on-device"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://wildedge.dev"
Documentation = "https://docs.wildedge.dev"
Source = "https://github.com/wildedge/wildedge-python"
Changelog = "https://github.com/wildedge/wildedge-python/blob/main/CHANGELOG.md"

[project.scripts]
wildedge = "wildedge.cli:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/scripts",
]

[tool.hatch.build.targets.wheel]
packages = ["wildedge"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "TID252"]
ignore = ["E501"]  # line-length is set above

[tool.ruff.lint.per-file-ignores]
"wildedge/decorators.py" = ["N801"]  # track is a decorator class, not following CapWords

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_level = "ERROR"
asyncio_mode = "auto"
markers = [
    "requires_linux: test only on Linux",
    "requires_macos: test only on macOS",
    "requires_windows: test only on Windows",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
    "tox",
    "coverage",
]
